# handler/common.go
@@ -6,9 +6,12 @@ import (
 	"fmt"
 	"io"
 	"net/http"
+	"net/url"
 	"strings"
 	"sync"
 	"time"
+
+	"andflix/go-api/crypto"
 )
 
 var deviceKeyCache sync.Map
@@ -61,4 +64,40 @@ func forwardRequest(method, url string, headers map[string]string, body io.Reade
 		req.Header.Set(k, v)
 	}
 	return httpClient.Do(req)
+}
+
+func callH5API(endpoint string, query map[string]string, aeskeyInternal, deviceID, token string) (int, map[string]interface{}, error) {
+	params := make(map[string]interface{})
+	for k, v := range query {
+		params[k] = v
+	}
+
+	headers := crypto.H5BuildSignHeaders(params, deviceID, token)
+
+	reqURL := h5APIBase + endpoint
+	if len(query) > 0 {
+		q := url.Values{}
+		for k, v := range query {
+			q.Set(k, v)
+		}
+		reqURL += "?" + q.Encode()
+	}
+
+	resp, err := forwardRequest("GET", reqURL, headers, nil)
+	if err != nil {
+		return 0, nil, fmt.Errorf("h5 request failed: %w", err)
+	}
+	defer resp.Body.Close()
+
+	respBody, err := io.ReadAll(resp.Body)
+	if err != nil {
+		return resp.StatusCode, nil, fmt.Errorf("failed to read h5 response body: %w", err)
+	}
+
+	var respJSON map[string]interface{}
+	if err := json.Unmarshal(respBody, &respJSON); err != nil {
+		return resp.StatusCode, nil, fmt.Errorf("non-json response from %s: %s", endpoint, string(respBody))
+	}
+
+	return resp.StatusCode, respJSON, nil
 }
